--- a/esp_bib.bib
+++ b/esp_bib.bib
@@ -972,3 +972,98 @@ URL = {https://www.aeaweb.org/articles?id=10.1257/pol.20190299}}
   year={2011},
   publisher={MIT Press}
 }
+
+@article{smith2019capitalists,
+  title={Capitalists in the Twenty-first Century},
+  author={Smith, Matthew and Yagan, Danny and Zidar, Owen and Zwick, Eric},
+  journal={The Quarterly Journal of Economics},
+  volume={134},
+  number={4},
+  pages={1675--1745},
+  year={2019},
+  publisher={Oxford University Press}
+}
+
+@techreport{derenoncourt2022wealth,
+  title={Wealth of Two Nations: The US Racial Wealth Gap, 1860-2020},
+  author={Derenoncourt, Ellora and Kim, Chi Hyun and Kuhn, Moritz and Schularick, Moritz},
+  year={2022},
+  institution={National Bureau of Economic Research}
+}
+
+@article{madrian2001power,
+  title={The power of suggestion: Inertia in 401 (k) participation and savings behavior},
+  author={Madrian, Brigitte C and Shea, Dennis F},
+  journal={The Quarterly journal of economics},
+  volume={116},
+  number={4},
+  pages={1149--1187},
+  year={2001},
+  publisher={MIT Press}
+}
+
+@article{agersnap2021tax,
+  title={The tax elasticity of capital gains and revenue-maximizing rates},
+  author={Agersnap, Ole and Zidar, Owen},
+  journal={American Economic Review: Insights},
+  volume={3},
+  number={4},
+  pages={399--416},
+  year={2021}
+}
+
+@article{goupille2018behavioral,
+  title={Behavioral responses to inheritance tax: Evidence from notches in France},
+  author={Goupille-Lebret, Jonathan and Infante, Jose},
+  journal={Journal of Public Economics},
+  volume={168},
+  pages={21--34},
+  year={2018},
+  publisher={Elsevier}
+}
+
+@article{glogowsky2021behavioral,
+  title={Behavioral responses to inheritance and gift taxation: Evidence from Germany},
+  author={Glogowsky, Ulrich},
+  journal={Journal of Public Economics},
+  volume={193},
+  pages={104309},
+  year={2021},
+  publisher={Elsevier}
+}
+
+@article{hart2017companies,
+  title={Companies should maximize shareholder welfare not market value},
+  author={Hart, Oliver and Zingales, Luigi},
+  journal={ECGI-Finance Working Paper},
+  number={521},
+  year={2017}
+}
+
+@techreport{torslov2018missing,
+  title={The missing profits of nations},
+  author={T{\o}rsl{\o}v, Thomas R and Wier, Ludvig S and Zucman, Gabriel},
+  year={2018},
+  institution={National Bureau of Economic Research}
+}
+
+@article{suarez2016benefits,
+  title={Who benefits from state corporate tax cuts? A local labor markets approach with heterogeneous firms},
+  author={Su{\'a}rez Serrato, Juan Carlos and Zidar, Owen},
+  journal={American Economic Review},
+  volume={106},
+  number={9},
+  pages={2582--2624},
+  year={2016}
+}
+
+@article{heider2015certain,
+  title={As certain as debt and taxes: Estimating the tax sensitivity of leverage from state tax changes},
+  author={Heider, Florian and Ljungqvist, Alexander},
+  journal={Journal of financial economics},
+  volume={118},
+  number={3},
+  pages={684--712},
+  year={2015},
+  publisher={Elsevier}
+}
